pp2/samples/rvaluedecr.out

*** Error line 2.
    0--; // Error: Postfix decrement can only be applied to lvalues
     ^^
*** syntax error

