pp2/samples/rvaluedecr.decaf
int main() {
    0--; // Error: Postfix decrement can only be applied to lvalues
}
